exports[`test Signup renders 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className="is-active is-current"
            href="/start"
            onClick={[Function]}>
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Classification
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/your-info"
            onClick={[Function]}>
            <span>
              Contact details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Studies
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div>
      <h1>
        Joining the Marketplace
      </h1>
      <p>
        Sign up to the Digital Marketplace so buyers can find your business and you can apply for new opportunities.
      </p>
      <p>
        It takes around 30 minutes to complete and your information is saved automatically. 24 hours later, your profile will be visible to government buyers.
      </p>
      <h2>
        You\'ll need:
      </h2>
      <ul>
        <li>
          Your basic business information, for example
        </li>
        <li>
          A financial viability statement from your accountant
        </li>
        <li>
          Proof of worker’s compensation and public liability insurance
        </li>
      </ul>
      <h2>
        You\'ll be asked to provide:
      </h2>
      <ul>
        <li>
          Proof of successful projects and past client contact details that will be assessed against 
          <a
            href="/evaluation-criteria"
            rel="external"
            target="_blank">
            evaluation criteria
          </a>
        </li>
      </ul>
      <p>
        <a
          href="#"
          onClick={[Function]}
          role="button">
          Start Now 
        </a>
      </p>
    </div>
  </article>
</div>
`;

exports[`test Signup renders empty Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}>
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Classification
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <span>
              Contact details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Studies
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1
          tabIndex="-1">
          Contact details
        </h1>
      </header>
      <article
        role="main">
        <form
          action={undefined}
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_name">
              Primary contact
            </label>
            <p
              className="hint"
              id="contact_name-hint">
              This person may be contacted by government buyers and receive new opportunities by email.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              id="contact_name"
              maxLength={undefined}
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_phone"
              maxLength={undefined}
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_email"
              maxLength={undefined}
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Authorised Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              This person must be authorised to enter into contracts on behalf of the business. It can be the same person as your primary contact.
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              maxLength={undefined}
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              maxLength={undefined}
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              maxLength={undefined}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="domains" />
          <input
            role="button"
            type="submit"
            value="Save and continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;

exports[`test Signup renders populated Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}>
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Classification
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <span>
              Contact details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Studies
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1
          tabIndex="-1">
          Contact details
        </h1>
      </header>
      <article
        role="main">
        <form
          action="/documents"
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_name">
              Primary contact
            </label>
            <p
              className="hint"
              id="contact_name-hint">
              This person may be contacted by government buyers and receive new opportunities by email.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              id="contact_name"
              maxLength={undefined}
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_phone"
              maxLength={undefined}
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_email"
              maxLength={undefined}
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Authorised Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              This person must be authorised to enter into contracts on behalf of the business. It can be the same person as your primary contact.
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              maxLength={undefined}
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="Paul Acron" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              maxLength={undefined}
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="0292000000" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              maxLength={undefined}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="email@domain.com" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="domains" />
          <input
            role="button"
            type="submit"
            value="Save and continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;
